<?xml version="1.0" encoding="utf-8" ?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_menu_home"
            android:title="@string/nav_menu_home"
            android:icon="@drawable/ic_home" />

        <item
            android:id="@+id/nav_menu_mention"
            android:title="@string/nav_menu_mention"
            android:icon="@drawable/ic_reply" />

        <item
            android:id="@+id/nav_menu_favorite"
            android:title="@string/nav_menu_favorite"
            android:icon="@drawable/ic_grade" />

        <item
            android:id="@+id/nav_menu_follow"
            android:title="@string/nav_menu_follow"
            android:icon="@drawable/ic_follow" />

        <item
            android:id="@+id/nav_menu_follower"
            android:title="@string/nav_menu_follower"
            android:icon="@drawable/ic_follower" />

        <item
            android:id="@+id/nav_menu_list"
            android:title="@string/nav_menu_list"
            android:icon="@drawable/ic_list" />

        <item
            android:id="@+id/nav_menu_exit"
            android:title="@string/nav_menu_exit"
            android:icon="@drawable/ic_exit" />

    </group>

</menu>
